apps/contextapi/overlays/skyvafnir-dev/contextapi-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contextapi
spec:
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - backend:
              service:
                name: contextapi
                port:
                  number: 4001
            path: /stats
            pathType: Prefix
          - backend:
              service:
                name: contextapi
                port:
                  number: 4001
            path: /context
            pathType: Prefix
          - backend:
              service:
                name: contextapi
                port:
                  number: 4001
            path: /graph
            pathType: Prefix
